added functional 'achievments' modal to work-exp-item

--- a/src/app/components/cv/work-experience/work-experience.component.html
+++ b/src/app/components/cv/work-experience/work-experience.component.html
@@ -1,4 +1,13 @@
-<p>work-experience component</p>
+<section>
+  <h3>Summary</h3>
+  <p>
+    I am a solutions & web developer with commercial experience working in both
+    corporate and startup settings that is currently seeking a Fullstack
+    position. I am looking to work alongside an expert team of developers with
+    the intention to broaden as well as deepen my skillset so to eventually take
+    ownership of projects.
+  </p>
+</section>
 
 <div class="row">
   <div class="col">
@@ -15,7 +24,7 @@
       data-aos="zoom-in-right"
     >
       <div class="content">
-        <h2>2017</h2>
+        <h2>{{ expItem.startDate }}</h2>
         <p>
           <app-work-exp-item [workExpItem]="expItem"></app-work-exp-item>
         </p>
@@ -28,83 +37,11 @@
       data-aos="zoom-in-right"
     >
       <div class="content">
-        <h2>2017</h2>
+        <h2>{{ expItem.startDate }}</h2>
         <p>
           <app-work-exp-item [workExpItem]="expItem"></app-work-exp-item>
         </p>
       </div>
-    </div>
-  </div>
-  <div class="container-timeline left" data-aos="zoom-in-right">
-    <div class="content">
-      <h2>2017</h2>
-      <p>
-        Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum
-        perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret
-        expetendis his, te elit voluptua dignissim per, habeo iusto primis ea
-        eam. Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec
-        admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis
-        iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-        primis ea eam. Lorem ipsum dolor sit amet, quo ei simul congue exerci,
-        ad nec admodum perfecto mnesarchum, vim ea mazim fierent detracto. Ea
-        quis iuvaret expetendis his, te elit voluptua dignissim per, habeo iusto
-        primis ea eam.
-      </p>
-    </div>
-  </div>
-  <div class="container-timeline right" data-aos="zoom-in-left">
-    <div class="content">
-      <h2>2016</h2>
-      <p>
-        Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum
-        perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret
-        expetendis his, te elit voluptua dignissim per, habeo iusto primis ea
-        eam.
-      </p>
-    </div>
-  </div>
-  <div class="container-timeline left" data-aos="zoom-in-right">
-    <div class="content">
-      <h2>2015</h2>
-      <p>
-        Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum
-        perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret
-        expetendis his, te elit voluptua dignissim per, habeo iusto primis ea
-        eam.
-      </p>
-    </div>
-  </div>
-  <div class="container-timeline right" data-aos="zoom-in-left">
-    <div class="content">
-      <h2>2012</h2>
-      <p>
-        Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum
-        perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret
-        expetendis his, te elit voluptua dignissim per, habeo iusto primis ea
-        eam.
-      </p>
-    </div>
-  </div>
-  <div class="container-timeline left" data-aos="zoom-in-right">
-    <div class="content">
-      <h2>2011</h2>
-      <p>
-        Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum
-        perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret
-        expetendis his, te elit voluptua dignissim per, habeo iusto primis ea
-        eam.
-      </p>
-    </div>
-  </div>
-  <div class="container-timeline right" data-aos="zoom-in-left">
-    <div class="content">
-      <h2>2007</h2>
-      <p>
-        Lorem ipsum dolor sit amet, quo ei simul congue exerci, ad nec admodum
-        perfecto mnesarchum, vim ea mazim fierent detracto. Ea quis iuvaret
-        expetendis his, te elit voluptua dignissim per, habeo iusto primis ea
-        eam.
-      </p>
     </div>
   </div>
 </div>
