--- a/src/app/components/cv/work-exp-item/work-exp-item.component.html
+++ b/src/app/components/cv/work-exp-item/work-exp-item.component.html
@@ -1,2 +1,49 @@
 <p>{{ workExpItem.company }}</p>
 <p>{{ workExpItem.id }}</p>
+<p>{{ workExpItem.blurb }}</p>
+
+<!-- Button trigger modal -->
+<button
+  type="button"
+  class="btn btn-brown"
+  data-toggle="modal"
+  [attr.data-target]="'#exampleModalLong-' + workExpItem.id"
+>
+  <fa-icon [icon]="faInfoCircle"></fa-icon>
+  Read more
+</button>
+
+<div
+  class="modal fade"
+  [attr.id]="'exampleModalLong-' + workExpItem.id"
+  tabindex="-1"
+  role="dialog"
+  aria-labelledby="exampleModalLongTitle"
+  aria-hidden="true"
+>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+        <button
+          type="button"
+          class="close"
+          data-dismiss="modal"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <ul *ngFor="let i of workExpItem.achievments">
+          <li>{{ i }}</li>
+        </ul>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">
+          Close
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
