--- a/src/app/components/cv/work-experience/work-experience.component.html
+++ b/src/app/components/cv/work-experience/work-experience.component.html
@@ -24,7 +24,7 @@
       data-aos="zoom-in-right"
     >
       <div class="content">
-        <h2>{{ expItem.startDate }}</h2>
+        <h3>{{ expItem.company }}</h3>
         <p>
           <app-work-exp-item [workExpItem]="expItem"></app-work-exp-item>
         </p>
@@ -37,7 +37,7 @@
       data-aos="zoom-in-right"
     >
       <div class="content">
-        <h2>{{ expItem.startDate }}</h2>
+        <h3>{{ expItem.company }}</h3>
         <p>
           <app-work-exp-item [workExpItem]="expItem"></app-work-exp-item>
         </p>
