updated project-data and model

--- a/src/app/components/project-item/project-item.component.html
+++ b/src/app/components/project-item/project-item.component.html
@@ -20,6 +20,9 @@
           GitHub</a
         >
 
+        <!--Make an ngIf that renders a button with a
+          link to a /api-project component if projectItem.isAPI === true-->
+
         <button
           type="button"
           class="btn btn-brown btn-space"
