--- a/src/app/components/project-details/project-details.component.html
+++ b/src/app/components/project-details/project-details.component.html
@@ -1,7 +1,16 @@
-<h1>{{ project.title }}</h1>
-<p>{{ project.about }}</p>
-
 <div class="container">
+  <div class="row">
+    <div class="col">
+      <h1 class="text-center">{{ project.title }}</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col">
+      <p>{{ project.aboutLong }}</p>
+    </div>
+  </div>
+
   <h3>Stack</h3>
   <br />
   <div class="row">
