added ngIf for live link button and updated projects model to include api and live boolean fields

--- a/src/app/components/project-item/project-item.component.html
+++ b/src/app/components/project-item/project-item.component.html
@@ -31,6 +31,15 @@
           <fa-icon [icon]="faInfoCircle"></fa-icon>
           Read more
         </button>
+
+        <button
+          *ngIf="projectItem.live"
+          type="button"
+          class="btn btn-brown btn-space"
+        >
+          <fa-icon [icon]="faExternalLinkAlt"></fa-icon>
+          Live Link
+        </button>
       </div>
     </div>
   </div>
