added api-project-details component, conditional rendering and routing

--- a/src/app/components/project-details/project-details.component.html
+++ b/src/app/components/project-details/project-details.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <a (click)="back()" href="#" class="previous round">&#8249;</a>
+
       <h1 class="text-center">{{ project.title }}</h1>
     </div>
   </div>
