--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -43,6 +43,7 @@
           aria-haspopup="true"
           aria-expanded="false"
         >
+          <fa-icon class="btn-space" [icon]="faBlog"></fa-icon>
           Blogs
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
