--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -30,7 +30,7 @@
         >
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"
+        <a class="nav-link" [routerLink]="['/contact']"
           ><fa-icon class="btn-space" [icon]="faUser"></fa-icon>Contact</a
         >
       </li>
