animation for about and changed css to dark theme

--- a/src/app/components/cv/work-experience/work-experience.component.html
+++ b/src/app/components/cv/work-experience/work-experience.component.html
@@ -1,6 +1,6 @@
 <section>
-  <h3>Summary</h3>
-  <p>
+  <h3 style="text-align: center;">Summary</h3>
+  <p style="text-align: center;">
     I am a solutions & web developer with commercial experience working in both
     corporate and startup settings that is currently seeking a Fullstack
     position. I am looking to work alongside an expert team of developers with
