--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-pink">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-pink">
   <button
     class="navbar-toggler"
     type="button"
