--- a/src/app/components/project-item/project-item.component.html
+++ b/src/app/components/project-item/project-item.component.html
@@ -1,16 +1,24 @@
-<div class="card flex-row flex-wrap">
+<div class="project-item card flex-row flex-wrap">
   <div class="row no-gutters">
     <div
       class="col-auto"
       data-aos=""
       [attr.data-aos]="projectItem.id % 2 == 0 ? 'fade-left' : 'fade-right'"
     >
-      <img src="//placehold.it/200" class="img-fluid" alt="" />
+      <img
+        src="{{ projectItem.gifURL }}"
+        class="img-fluid"
+        alt=""
+        width="300"
+        height="300"
+      />
     </div>
     <div class="col">
       <div class="card-block px-2">
         <h4 class="card-title">{{ projectItem.title }}</h4>
-        <p class="card-text">{{ projectItem.about }}</p>
+        <p class="card-text">
+          {{ projectItem.about }}
+        </p>
         <a
           href="{{ projectItem.gitURL }}"
           class="btn btn-brown btn-space"
@@ -47,5 +55,5 @@
       </div>
     </div>
   </div>
-  <div class="w-100 "></div>
+  <div class="w-100"></div>
 </div>
