--- a/src/app/components/api-project-details/api-project-details.component.html
+++ b/src/app/components/api-project-details/api-project-details.component.html
@@ -8,12 +8,12 @@
   </div>
 
   <div class="row">
-    <div class="col">
+    <div class="col" style="text-align: center;">
       <p>{{ project.aboutLong }}</p>
     </div>
   </div>
 
-  <h3>Stack</h3>
+  <h3 style="text-align: center;">Stack</h3>
   <br />
   <div class="row">
     <div class="col" *ngFor="let tech of project.stack">
