--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -79,6 +79,8 @@
       [disabled]="contactForm.invalid"
       type="submit"
       class="btn btn-primary my-2"
+      data-toggle="modal"
+      data-target="#exampleModal"
     >
       Submit
     </button>
@@ -91,4 +93,39 @@
       This is a danger alert—check it out!
     </div>
   </form>
+
+  <!-- Email Confirmation Modal -->
+  <div
+    class="modal fade"
+    id="exampleModal"
+    tabindex="-1"
+    role="dialog"
+    aria-labelledby="exampleModalLabel"
+    aria-hidden="true"
+  >
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Email Confirmation</h5>
+          <button
+            type="button"
+            class="close"
+            data-dismiss="modal"
+            aria-label="Close"
+          >
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          Your email has been received at diongarman@gmail.com. The site admin
+          will be in touch with your very shortly!
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">
+            Close
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
