--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -1,10 +1,10 @@
 <div class="text-container">
   <img src="../../../assets/stock.jpg" id="section-1" />
   <div class="centered">
-    <p class="display-3">About</p>
-    <br />
+    <p class="display-3" style="font-size: 7.5vw;">About</p>
+    
 
-    <p class="lead" @myInsertRemoveTrigger>
+    <p style="font-size: 2vw; line-height: 4vw" @myInsertRemoveTrigger>
       I am a solutions & web developer with commercial experience working in
       both corporate and startup settings that is currently seeking a Fullstack
       position. I am looking to work alongside an expert team of developers with
@@ -15,10 +15,10 @@
 </div>
 <div id="portfolio" class="container">
   <br />
-  <h1 class="text text-center display-2" style="margin-top: 1rem;">Projects</h1>
+  <h1 class="text text-center display-2" style="font-size: 7.5vw;">Projects</h1>
   <div
     style="margin-top: 15px; margin-bottom: 15px;"
-    *ngFor="let project of projects; let i = index"
+    *ngFor="let project of projects; let i = index"s
     data-aos=""
     [attr.data-aos]="i % 2 == 0 ? 'fade-right' : 'fade-left'"
   >
