--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -4,7 +4,7 @@
     <p class="display-3" style="font-size: 7.5vw;">About</p>
     
 
-    <p style="font-size: 2vw; line-height: 4vw" @myInsertRemoveTrigger>
+    <p class='phone-sizing larger-device-sizing' @myInsertRemoveTrigger>
       I am a solutions & web developer with commercial experience working in
       both corporate and startup settings that is currently seeking a Fullstack
       position. I am looking to work alongside an expert team of developers with
