--- a/src/app/components/projects/projects.component.css
+++ b/src/app/components/projects/projects.component.css
@@ -25,3 +25,23 @@
   color: white;
   text-align: center;
 }
+
+@media only screen 
+and (max-device-width : 768px) {
+
+  .phone-sizing {
+    font-size: 3.5vw; 
+    line-height: 4.5vw; 
+    width: 90vw
+  }
+}
+
+@media only screen 
+and (min-device-width : 768px) {
+
+  .larger-device-sizing {
+    font-size: 2.5vw; 
+    line-height: 3.5vw; 
+    width: 80vw
+  }
+}
